# video-player

./: package-lock.json  package.json  vite.config.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: file_system.rs  lib.rs  main.rs  mpv.rs
src/lib/: mpv.svelte.ts
src/lib/components/: PlayerControls.svelte  SidebarItem.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/player/: +page.svelte
src/routes/videos/: +page.svelte
