[package]
name = "video-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "video_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-opener = "2"

tauri = { version = "2", features = [ "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
raw-window-handle = "0.6"
walkdir = "2"  # For filesystem walking
libmpv = "2.0"
dirs = "6.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2.3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
